--- a/public/styles/scss/main-css.scss
+++ b/public/styles/scss/main-css.scss
@@ -31,11 +31,11 @@
 @import "base/_fonts";
 
 /* Layout */
+@import "layouts/_dashboard";
 @import "layouts/_footer";
 @import "layouts/_header";
 @import "layouts/_hero";
 @import "layouts/_pub-display";
-@import "layouts/_sidebar--right";
 @import "layouts/_topbar";
 
 /* Utils Modules */
