--- a/public/styles/scss/modules/_background.scss
+++ b/public/styles/scss/modules/_background.scss
@@ -92,6 +92,6 @@
         }
     }
     &.overlay--neutral {
-        background-color: $primary_col;
+        background-color: $full-dark-second_col;
     }
 }
