--- a/public/styles/scss/modules/utils/_button.scss
+++ b/public/styles/scss/modules/utils/_button.scss
@@ -56,7 +56,7 @@
 	min-width: 100px;
 	padding: 10px 20px;
 
-	border: 1.5px solid $green_col;
+	border: 1.5px solid $main-third--special_col;
 	@include border-radius(18px);
 	
 	font: {
