--- a/public/styles/scss/base/_base.scss
+++ b/public/styles/scss/base/_base.scss
@@ -93,7 +93,7 @@ path {
     padding: 10px;
 }
 
-/* TAGS RULES*/
+/* TAGS RULES */
 
 .bar {
     position: relative;
@@ -111,6 +111,10 @@ li.stacked {
     margin-bottom: 30px;
 
     overflow: hidden;
+}
+
+.interface {
+    cursor: pointer;
 }
 
 svg.icon {
