--- a/public/styles/scss/main-css.scss
+++ b/public/styles/scss/main-css.scss
@@ -47,6 +47,7 @@
 @import "modules/_box";
 @import "modules/_cookie";
 @import "modules/_custom-select";
+@import "modules/_dashboard";
 @import "modules/_fa";
 @import "modules/_feedback";
 @import "modules/_flash";
@@ -56,6 +57,7 @@
 @import "modules/_nprogress";
 @import "modules/_page";
 @import "modules/_rating-icons";
+@import "modules/_react-placeholder";
 @import "modules/_slider";
 @import "modules/_theme";
 @import "modules/_tooltip";
