--- a/public/styles/scss/modules/_grid.scss
+++ b/public/styles/scss/modules/_grid.scss
@@ -9,25 +9,36 @@
     }
 }
 
-@for $i from 1 through 12 {
+%col-m {
     @media screen and (min-width: $portrait_tablet_size) {
-        %col-grid {
-            position: relative;
-            min-height: 1px;
-            padding: {
-                left: 15px;
-                right: 15px;
-            }
+        position: relative;
+        @include inline-block(top);
+        min-height: 1px;
+        padding: {
+            left: 15px;
+            right: 15px;
         }
+    }
+}
 
-        .col-m-#{$i} {
-            @extend %col-grid;
-            width: #{$i * (100% / 12)};
-        }
+%col-s {
+    position: relative;
+    @include inline-block(top);
+    min-height: 1px;
+    padding: {
+        left: 15px;
+        right: 15px;
+    }
+}
+
+@for $i from 1 through 12 {
+    .col-m-#{$i} {
+        @extend %col-m;
+        width: #{$i * (100% / 12)};
     }
 
     .col-s-#{$i} {
-        @extend %col-grid;
+        @extend %col-s;
         width: #{$i * (100% / 12)};
     }
 }
